--- a/skeleton/game.vcxproj.filters
+++ b/skeleton/game.vcxproj.filters
@@ -13,6 +13,9 @@
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="Axis.cpp" />
     <ClCompile Include="Dartboard.cpp" />
+    <ClCompile Include="ParticleGenerator.cpp" />
+    <ClCompile Include="UniformParticleGenerator.cpp" />
+    <ClCompile Include="ParticleSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="core.hpp" />
@@ -27,6 +30,9 @@
     <ClInclude Include="Particle.h" />
     <ClInclude Include="Axis.h" />
     <ClInclude Include="Dartboard.h" />
+    <ClInclude Include="ParticleGenerator.h" />
+    <ClInclude Include="UniformParticleGenerator.h" />
+    <ClInclude Include="ParticleSystem.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Render">
