--- a/skeleton/game.vcxproj.filters
+++ b/skeleton/game.vcxproj.filters
@@ -20,6 +20,8 @@
     <ClCompile Include="Firework.cpp" />
     <ClCompile Include="CircleGenerator.cpp" />
     <ClCompile Include="ForceRegistry.cpp" />
+    <ClCompile Include="ForceGenerator.cpp" />
+    <ClCompile Include="GravityForceGenerator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="core.hpp" />
@@ -42,6 +44,8 @@
     <ClInclude Include="Firework.h" />
     <ClInclude Include="CircleGenerator.h" />
     <ClInclude Include="ForceRegistry.h" />
+    <ClInclude Include="ForceGenerator.h" />
+    <ClInclude Include="GravityForceGenerator.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Render">
