--- a/skeleton/game.vcxproj
+++ b/skeleton/game.vcxproj
@@ -255,9 +255,11 @@
   <ItemGroup>
     <ClCompile Include="AnchoredSpringFG.cpp" />
     <ClCompile Include="Axis.cpp" />
+    <ClCompile Include="BuoyancyFG.cpp" />
     <ClCompile Include="callbacks.cpp" />
     <ClCompile Include="CircleGenerator.cpp" />
     <ClCompile Include="Dartboard.cpp" />
+    <ClCompile Include="ElasticBandFG.cpp" />
     <ClCompile Include="ExplosionForceGenerator.cpp" />
     <ClCompile Include="Firework.cpp" />
     <ClCompile Include="ForceGenerator.cpp" />
@@ -279,10 +281,12 @@
   <ItemGroup>
     <ClInclude Include="AnchoredSpringFG.h" />
     <ClInclude Include="Axis.h" />
+    <ClInclude Include="BuoyancyFG.h" />
     <ClInclude Include="callbacks.hpp" />
     <ClInclude Include="CircleGenerator.h" />
     <ClInclude Include="core.hpp" />
     <ClInclude Include="Dartboard.h" />
+    <ClInclude Include="ElasticBandFG.h" />
     <ClInclude Include="ExplosionForceGenerator.h" />
     <ClInclude Include="Firework.h" />
     <ClInclude Include="ForceGenerator.h" />
