--- a/skeleton/game.vcxproj
+++ b/skeleton/game.vcxproj
@@ -274,6 +274,8 @@
     <ClCompile Include="Render\Camera.cpp" />
     <ClCompile Include="Render\Render.cpp" />
     <ClCompile Include="NormalParticleGenerator.cpp" />
+    <ClCompile Include="RigidDynamicParticle.cpp" />
+    <ClCompile Include="ShootParticleGenerator.cpp" />
     <ClCompile Include="SpringForceGenerator.cpp" />
     <ClCompile Include="UniformParticleGenerator.cpp" />
     <ClCompile Include="WhirlwindForceGenerator.cpp" />
@@ -302,6 +304,8 @@
     <ClInclude Include="Render\Camera.h" />
     <ClInclude Include="Render\Render.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="RigidDynamicParticle.h" />
+    <ClInclude Include="ShootParticleGenerator.h" />
     <ClInclude Include="SpringForceGenerator.h" />
     <ClInclude Include="UniformParticleGenerator.h" />
     <ClInclude Include="WhirlwindForceGenerator.h" />
